# codex-convert-proxy

./: .gitignore  Cargo.toml  Makefile  README.md  config.example.json  package-lock.json
docs/: chat-vs-response-api.md  chat_completions_api.yml  responses_api.yml
src/: acp.rs  cli.rs  config.rs  constants.rs  error.rs  lib.rs  logger.rs  main.rs  server.rs  stats.rs  telemetry.rs
src/convert/: context.rs  mod.rs  request.rs  response.rs  streaming.rs  util.rs
src/convert/request/: context.rs  messages.rs  mod.rs  tools.rs
src/convert/streaming/: converter.rs  events.rs  mod.rs  sse_ser.rs  state.rs
src/providers/: capabilities.rs  deepseek.rs  default.rs  glm.rs  kimi.rs  minimax.rs  mod.rs  openai_compat.rs  trait_.rs
src/providers/adapter/: config.rs  mod.rs  openai_chat.rs  openai_responses.rs  traits.rs
src/proxy/: context.rs  context_store.rs  core.rs  error_response.rs  filters.rs  mod.rs  pingora.rs  proxy_impl.rs  request_body.rs  response_body.rs  routing.rs  streaming_handler.rs
src/streaming/: mod.rs
src/types/: chat_api.rs  mod.rs  response_api.rs
src/util/: mod.rs  sse.rs
tests/: deepseek_live.rs  glm_live.rs  minimax_live.rs
