[package]
name = "codex-convert-proxy"
version = "0.1.5"
edition = "2024"
description = "A high-performance proxy server that converts between different AI API formats"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soddygo/codex-convert-proxy"
keywords = ["proxy", "ai", "openai", "api", "conversion"]
categories = ["web-programming", "network-programming"]

[features]
# Default = full proxy server binary.
default = ["server","acp"]

# Library: providers + conversion + types. For embedding the conversion logic
# in other Rust applications without pulling in Pingora / the proxy server.
lib = ["async-trait"]

# Server: the full standalone proxy binary (depends on `lib`, adds config
# parsing, the Pingora HTTP server, CLI, and logging).
server = [
    "lib",
    "url",
    "clap",
    "tracing-subscriber",
    "tracing-appender",
    "dep:codex-utils-rustls-provider",
    "pingora/lb",
    "pingora/rustls",
    "pingora-core/rustls",
    "pingora-http",
    "pingora-proxy/rustls",
]

# ACP: start a Codex ACP agent with an embedded conversion proxy.
acp = [
    "server",
    "dep:nuwax-codex-acp",
    "dep:codex-arg0",
    "dep:codex-utils-cli",
    "dep:gix-actor",
    "dep:icu_calendar",
]

# Telemetry: OpenTelemetry exporters for tracing/metrics. Independent of
# server vs lib; combine as needed.
telemetry = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[dependencies]
# Core (always available with lib or full)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
http = "1"
http-body-util = "0.1.3"
bytes = "1"
tracing = "0.1"
memchr = "2.5"

# HTTP client for manual upstream requests
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }

# CLI (binary feature)
clap = { version = "4", features = ["derive", "env"], optional = true }

# Logging (binary feature)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }

# OpenTelemetry integration (telemetry-lib feature)
opentelemetry = { version = "0.31", features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# Pingora (server feature)
pingora = { version = "0.8", optional = true }
pingora-core = { version = "0.8", optional = true }
pingora-http = { version = "0.8", optional = true }
pingora-proxy = { version = "0.8", optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", optional = true }

# ACP integration (optional)
nuwax-codex-acp = { path = "/Volumes/soddy/git_workspace/nuwax-codex-acp", optional = true }
codex-arg0 = { path = "/Volumes/soddy/git_workspace/fork-codex/codex-rs/arg0", optional = true }
codex-utils-cli = { path = "/Volumes/soddy/git_workspace/fork-codex/codex-rs/utils/cli", optional = true }
codex-utils-rustls-provider = { path = "/Volumes/soddy/git_workspace/fork-codex/codex-rs/utils/rustls-provider", optional = true }
# Pins required by the Codex dependency graph.
gix-actor = { version = "=0.40.0", optional = true }
icu_calendar = { version = "~2.1", optional = true }

[[bin]]
name = "codex-convert-proxy"
path = "src/main.rs"
# The proxy binary requires the full server stack. With only `lib` enabled
# the crate is consumable as a library but the binary won't compile.
required-features = ["server"]

[dev-dependencies]
tokio-test = "0.4"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
